# python-template-repo

./: .mise.toml  CODEOWNERS  README.md  TEMPLATE_README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml
.github/workflows/: cicd.yaml
.mise/tasks/: publish  release  setup-repo
.mise/tasks/format/: docs
REPO/: __main__.py
docs/: index.md
tests/: test_main.py
